--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/http-errors": "^2.0.5",
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
+    "@types/pg": "^8.16.0",
     "aws-cdk": "2.1023.0",
     "esbuild": "^0.27.2",
     "jest": "^29.7.0",
@@ -22,10 +23,14 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@aws-lambda-powertools/idempotency": "2.30",
     "@aws-lambda-powertools/logger": "^2.30.0",
     "@aws-lambda-powertools/metrics": "^2.30.0",
     "@aws-lambda-powertools/tracer": "^2.30.0",
     "@aws-sdk/client-dynamodb": "^3.956.0",
+    "@aws-sdk/client-s3": "^3.964.0",
+    "@aws-sdk/dsql-signer": "^3.962.0",
+    "@aws-sdk/s3-request-presigner": "^3.964.0",
     "@aws-sdk/util-dynamodb": "^3.956.0",
     "@leighton-digital/lambda-toolkit": "^1.2.2",
     "@middy/core": "^6.4.5",
@@ -34,6 +39,7 @@
     "ajv-formats": "^3.0.1",
     "aws-cdk-lib": "2.206.0",
     "constructs": "^10.0.0",
-    "http-errors": "^2.0.1"
+    "http-errors": "^2.0.1",
+    "pg": "^8.16.3"
   }
 }
